<resources>

    <string name="app_name">E - Gluu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">E - Gluu</string>
    <string name="nav_header_subtitle">Friamente Calculado</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="google_maps_key">AIzaSyAZ00n6_GDpEZOBhpPu1Gbrq6yG5ByacBw</string>


    <string name="menu_home">Agregar Producto</string>
    <string name="menu_gallery">Editar Producto</string>
    <string name="menu_slideshow">Eliminar Producto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</string>

    <!--   Strings de Vivi  -->

    <string name="email">Email</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="inciar_sesion">Iniciar sesión</string>
    <string name="registrate_aqui">Registrate aqui</string>
    <string name="aun_no_tienes_cuenta">¿Aun no tienes una cuenta?</string>
    <string name="name_user">User</string>
    <string name="confirmar_contraseña">Confirmar Contraseña</string>
    <string name="terminos">Acepto los terminos y condiciones.</string>
    <string name="registrate">Registrarse</string>
    <string name="incia_sesion">Inicia sesión</string>
    <string name="yaregistrado">¿Ya estas registrado?</string>
    <string name="terminosycondiciones">"Ver terminos y condiciones "</string>
    <string name="nombre_producto1">Producto Uno</string>
    <string name="nombre_producto2">Producto Dos</string>
    <string name="nombre_producto3">Producto Tres</string>
    <string name="nombre_producto4">Producto Cuatro</string>
    <string name="nombre_producto5">Producto Cinco</string>
    <string name="nombre_producto6">Producto Seis</string>
    <string name="descripcion_producto1">Precio:$....Cantidad:...</string>

    <!-- Strings Agregar-->
    <string name="appagregar">Agregar Producto</string>
    <string name="codigo">Codigo de barras:</string>
    <string name="nombreproducto">Nombre del producto:</string>
    <string name="detalles">Detalles del producto:</string>
    <string name="stock">Stock:</string>
    <string name="preciocompa">Precio Compra:</string>
    <string name="precioventa">Precio Venta:</string>
    <string name="agregar">AGREGAR</string>
    <string name="redestitulo">¡Cualquier pregunta o duda contactanos! Nuestras redes sociales estan abiertas</string>
    <string name="fbpage">Página de Facebook</string>
    <string name="contacto">Contactanos</string>
    <string name="instapage">Página de Instagram</string>
    <string name="telefono">Envia un mensaje de WhatsApp al número: </string>
    <string name="numerotele" translatable="false">4491383098</string>
    <!-- Strings Eliminar-->
    <string name="appeliminar">Eliminar Producto</string>
    <string name="detalleselimnar">"Presione el boton para escanear el codigo de barras del producto "</string>
    <string name="cerrarsesion">Cerrar sesión</string>
    <string name="menu_scanner">Escáner</string>
    <string name="menu_map">Buscar proveedor</string>
    <string name="menu_lista">Lista de productos</string>
    <string name="menu_detalles">Buscar Producto</string>
    <string name="menu_terminos">Términos y condiciones</string>
    <string name="up_nombrep">Nombre del producto</string>
    <string name="up_detallepro">Detalles del producto</string>
    <string name="up_preciocompra">Precio compra</string>
    <string name="up_precioventa">Precio venta</string>
    <string name="up_stock">Existencias</string>
    <string name="det_codigo">Ingresa codigo del producto</string>
    <string name="det_actualiza">Actualizar producto</string>
    <string name="det_busca">Buscar</string>
    <string name="del_txtview">Ingresa codigo a eliminar</string>
    <string name="del_btnelim">Eliminar</string>
    <string name="del_hintcode">Código</string>
    <string name="menu_buscar">Buscar Producto</string>
    <string name="menu_listap">Lista de Productos</string>
    <string name="menu_opciones">Opciones adicionales</string>
    <string name="menu_proveedor">Buscar un Proveedor</string>
    <string name="menu_otros">Otros</string>
    <string name="scan_titulo">Scanear Código de barras</string>
    <string name="scan_btn">Activar Escaner</string>
    <string name="scan_instruccion">Presione el boton para activar el scanner</string>
    <string name="scan_txtview">El codígo escaneado se mostrará aqui</string>
    <string name="map_btn">Abrir Google Maps</string>
    <string name="map_txtview">Presione el boton para iniciar Google Maps</string>
    <string name="ter_titulo">Términos y Condiciones</string>
    <string name="ter_body">" 1. Estos Términos y Condiciones de Uso regulan las reglas a que se sujeta la utilización de la APP “E-GLUU”, que es hecha específicamente para la empresa GLU de la APP atribuye la condición de Usuario a quien lo haga e implica la aceptación de todas las condiciones incluidas en este documento y en la Política de Privacidad y el Aviso Legal de dicha APP. El Usuario debería leer estas condiciones cada vez que utilice la APP, ya que podrían ser modificadas en lo sucesivo. la legislación mexicana. Para la resolución de cualquier conflicto relativo a su interpretación o aplicación, el Usuario se somete expresamente a la jurisdicción de los tribunales de Mexico. 3. Cargos: eres responsable del pago de todos los costes o gastos en los que incurras como resultado de descargar y usar la Aplicación de GLUU, incluido cualquier cargo de red de operador o itinerancia. Consulta con tu proveedor de servicios los detalles al respecto. 4. Estadísticas anónimas: GLUU se reserva el derecho a realizar un seguimiento de tu actividad en la Aplicación de y a informar de ello a nuestros proveedores de servicios estadísticos de terceros. Todo ello de forma anónima. 5. Protección de tu información personal: queremos ayudarte a llevar a cabo todos los pasos necesarios para proteger tu privacidad e información. Consulta la Política de privacidad de GLUU y los avisos sobre privacidad de la Aplicación para conocer qué tipo de información recopilamos y las medidas que tomamos para proteger tu información personal. 6. Queda prohibido alterar o modificar ninguna parte de la APP a de los contenidas de la misma, eludir, desactivar o manipular de cualquier otra forma (o tratar de eludir, desactivar o manipular) las funciones de seguridad u otras funciones del programa y utilizar la APP o sus contenidos para un fin comercial o publicitario. Queda prohibido el uso de la APP con la finalidad de lesionar bienes, derechos o intereses de GLUU o de terceros. Queda igualmente prohibido realizar cualquier otro uso que altere, dañe o inutilice las redes, servidores, equipos, productos y programas informáticos de GLUU o de terceros. 7. La APP y sus contenidos (textos, fotografías, gráficos, imágenes, tecnología, software, links, contenidos, diseño gráfico, código fuente, etc.), así como las marcas y demás signos distintivos son propiedad de GLUU o de terceros, no adquiriendo el Usuario ningún derecho sobre ellos por el mero uso de la APP. 8. Con sujeción a las condiciones establecidas en el apartado anterior, GLUU concede al Usuario una licencia de uso de la APP, no exclusiva, gratuita, para uso personal, circunscrita al territorio nacional y con carácter indefinido. Dicha licencia se concede también en los mismos términos con respecto a las actualizaciones y mejoras que se realizasen en la aplicación. Dichas licencias de uso podrán ser revocadas por GLUU unilateralmente en cualquier momento, mediante la mera notificación al Usuario. 9. Corresponde al Usuario, en todo caso, disponer de herramientas adecuadas para la detección y desinfección de programas maliciosos o cualquier otro elemento informático dañino. GLUU no se responsabiliza de los daños producidos a equipos informáticos durante el uso de la APP. Igualmente, GLUU no será responsable de los daños producidos a los Usuarios cuando dichos daños tengan su origen en fallos o desconexiones en las redes de telecomunicaciones que interrumpan el servicio. 10. IMPORTANTE: Podemos, sin que esto suponga ninguna obligación contigo, modificar estas Condiciones de uso sin avisar en cualquier momento. Si continúas utilizando la aplicación una vez realizada cualquier modificación en estas Condiciones de uso, esa utilización continuada constituirá la aceptación por tu parte de tales modificaciones. Si no aceptas estas condiciones de uso ni aceptas quedar sujeto a ellas, no debes utilizar la aplicación ni descargar o utilizar cualquier software relacionado. El uso que hagas de la aplicación queda bajo tu única responsabilidad. No tenemos responsabilidad alguna por la eliminación o la incapacidad de almacenar o trasmitir cualquier contenido u otra información mantenida o trasmitida por la aplicación. No somos responsables de la precisión o la fiabilidad de cualquier información o consejo trasmitidos a través de la aplicación. Podemos, en cualquier momento, limitar o interrumpir tu uso a nuestra única discreción. Hasta el máximo que permite la ley, en ningún caso seremos responsables por cualquier pérdida o daño relacionados. 11. El Usuario se compromete a hacer un uso correcto de la APP, de conformidad con la Ley, con los presentes Términos y Condiciones de Uso y con las demás reglamentos e instrucciones que, en su caso, pudieran ser de aplicación El Usuario responderá frente a GLUU y frente a terceros de cualesquiera daños o perjuicios que pudieran causarse por incumplimiento de estas obligaciones. 12. Estos Términos y Condiciones de Uso se rigen íntegramente por la legislación mexicana. Para la resolución de cualquier conflicto relativo a su interpretación o aplicación, el Usuario se somete expresamente a la jurisdicción de los tribunales de Mexico."</string>
    <string name="idioma">Idioma</string>
    <string name="acercade">Acerca de</string>
    <string name="Sobrenosotros">Sobre nosotros</string>
    <string name="equipo3">Equipo 3</string>
    <string name="contactanos">Contactanos</string>
    <string name="howto">Ayuda</string>
    <string name="bienvenida">Te damos la bienvenida!!</string>
    <string name="tituloohowto2">Comencemos!!</string>
    <string name="texthowto">Con esta aplicación usted podrá llevar un registro de su inventario a través de un lector de codigo de barras que le permitirá registrar sus productos en una base de datos en tiempo real, incluso si no cuenta con conexión a internet.</string>
    <string name="texthowto2">Al iniciar la aplicación podrás ver una lista de los productos que han sido registrados en nuestra base de datos.</string>
    <string name="texthowto3">Podras abrir el menu de esquina superior izquierda en el cual se encuentra una variedad de opciones para manejar su inventario.</string>
    <string name="texthowto4">Por otra parte el menú de la esquina superior derecha mostrará las opciones de cambio de idioma, ayuda y cerrar sesión.</string>
    <string name="texthowto5">Gracias por descargar nuestra aplicación, esperamos que sea de tu agrado!!</string>
</resources>