<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_listp">

    <fragment
        android:id="@+id/nav_home"
        android:name="mx.ita.navdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="mx.ita.navdrawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="mx.ita.navdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_qr"
        android:name="mx.ita.navdrawer.nav_escaner"
        android:label="@string/menu_scanner"
        tools:layout="@layout/fragment_nav_escaner" />
    <fragment
        android:id="@+id/nav_map2"
        android:name="mx.ita.navdrawer.nav_map"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_nav_map" />

    <navigation android:id="@+id/navigation"
        app:startDestination="@id/nav_detalledelProducto">
        <fragment
            android:id="@+id/nav_detalledelProducto"
            android:name="mx.ita.navdrawer.nav_detalledelProducto"
            android:label="fragment_nav_detalledel_producto"
            tools:layout="@layout/fragment_nav_detalledel_producto" />
    </navigation>
    <fragment
        android:id="@+id/nav_listp"
        android:name="mx.ita.navdrawer.nav_listp"
        android:label="@string/menu_lista"
        tools:layout="@layout/fragment_nav_listp" />
    <fragment
        android:id="@+id/nav_detalles"
        android:name="mx.ita.navdrawer.nav_detalles"
        android:label="@string/menu_detalles"
        tools:layout="@layout/fragment_nav_detalles" />
    <fragment
        android:id="@+id/nav_terminos"
        android:name="mx.ita.navdrawer.nav_terminos"
        android:label="@string/menu_terminos"
        tools:layout="@layout/fragment_nav_terminos" />
    <fragment
        android:id="@+id/contacto"
        android:name="mx.ita.navdrawer.Contacto"
        android:label="fragment_contacto"
        tools:layout="@layout/fragment_contacto" />
</navigation>