<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/texview1"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="497dp"
        android:text="@string/del_txtview"
        android:textAlignment="center"
        android:textSize="30sp"></TextView>

    <EditText
        android:id="@+id/edce"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="389dp"
        android:hint="@string/del_hintcode"></EditText>

    <Button
        android:id="@+id/btnep"
        android:layout_width="173dp"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="134dp"
        android:text="@string/del_btnelim"
        android:textColorLink="#05FFC5"
        app:icon="@drawable/ic_eliminar_producto"></Button>

    <Button
        android:id="@+id/btn_bar"
        android:layout_width="211dp"
        android:layout_height="74dp"
        android:layout_above="@+id/btnep"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="57dp"
        android:text="@string/scan_btn"
        app:icon="@drawable/ic_baseline_camera_alt_24" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="56dp"
        android:layout_height="69dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="503dp"
        app:srcCompat="@drawable/ic_delete"
        tools:ignore="VectorDrawableCompat" />

</RelativeLayout>