<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="#EEF2F6"
    tools:context=".Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEF2F6">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0097A9"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#0097A9"
                app:popupTheme="@style/Theme.MaterialComponents.Light"
                app:title="Registro"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="30dp"
            android:hint="@string/correo_electronico"
            android:textColorHint="#1F2D3D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#1F2D3D" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:hint="@string/contraseña"
            android:textColorHint="#1F2D3D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#1F2D3D" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:hint="@string/confirmar_contraseña"
            android:textColorHint="#1F2D3D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmarcontraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#1F2D3D" />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/checkBoxterminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/terminos"
            android:textColor="#1F2D3D"
            app:layout_constraintBottom_toTopOf="@+id/btnRegistro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintVertical_bias="0.611" />


        <Button

            android:id="@+id/btnRegistro"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="324dp"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:onClick="onClick"
            android:text="@string/registrate"
            app:backgroundTint="#47525E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxterminos" />

        <TextView
            android:id="@+id/loginTextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="96dp"
            android:text="@string/yaregistrado"
            android:textColor="#1F2D3D"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistro" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="96dp"
            android:onClick="onClick"
            android:text="@string/incia_sesion"
            android:textColor="#0097A7"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.892"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistro" />


        <TextView
            android:id="@+id/TermsText"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="76dp"
            android:layout_marginRight="30dp"
            android:text="@string/terminosycondiciones"
            android:textColor="#A9ABAE"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.203"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistro" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="80dp"
            android:layout_height="53dp"
            android:layout_marginTop="76dp"
            android:src="@drawable/add_user"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>