<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="#EEF2F6"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEF2F6">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0097A9"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#0097A9"
                app:popupTheme="@style/Theme.MaterialComponents.Light"
                app:title="Inicio de sesión"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="268dp"
            android:layout_marginRight="30dp"
            android:hint="@string/correo_electronico"
            android:textColorHint="#1F2D3D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleTint="#1F2D3D">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/correoelectronico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#1F2D3D" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:hint="@string/contraseña"
            android:textColorHint="#1F2D3D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#1F2D3D" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button

            android:id="@+id/btnLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="324dp"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="44dp"
            android:onClick="onClick"
            android:text="@string/inciar_sesion"
            app:backgroundTint="#7D858E"
            app:layout_constraintBottom_toTopOf="@+id/loginTextInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

        <TextView
            android:id="@+id/loginTextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="96dp"
            android:text="@string/aun_no_tienes_cuenta"
            android:textColor="#1F2D3D"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="96dp"
            android:onClick="onClick"
            android:text="@string/registrate_aqui"
            android:textColor="#0097A7"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.892"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="263dp"
            android:layout_height="57dp"
            android:gravity="center_horizontal"
            android:text="¡Bienvenido de vuelta!"
            android:textAlignment="center"
            android:textColor="#1F2D3D"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar"
            app:layout_constraintVertical_bias="0.238" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="79dp"
            android:layout_height="71dp"
            android:src="@drawable/user_1"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.468" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>